料金表示変更

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katari - Master Language Through Explanations</title>
+    <title>Katari - Master Language Through Detailed Explanations</title>
     <meta name="description"
-        content="Transform your language skills with AI-powered feedback. Practice explanations and professional communication in any language.">
+        content="Transform your language skills with AI-powered feedback. Practice detailed explanations and professional communication in any language.">
     <link rel="icon" type="image/svg+xml" href="katari_k.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
     <section class="hero">
         <div class="hero-background"></div>
         <div class="hero-content">
-            <h1 class="hero-title" data-i18n="heroTitle">Master Language Through Explanations</h1>
+            <h1 class="hero-title" data-i18n="heroTitle">Master Language Through<br>Detailed Explanations</h1>
             <p class="hero-subtitle" data-i18n="heroSubtitle">Transform casual conversation into professional
                 communication. Practice expressing complex ideas with AI-powered feedback.</p>
             <div class="hero-buttons">
@@ -139,7 +139,7 @@
                     </div>
                     <div class="step-content">
                         <h3 data-i18n="step3Title">Express in Target Language</h3>
-                        <p data-i18n="step3Desc">Type or speak your explanation in the language you're learning
+                        <p data-i18n="step3Desc">Type or speak your detailed explanation in the language you're learning
                             with voice recognition support</p>
                     </div>
                 </div>
@@ -257,17 +257,10 @@
                     <div class="badge" data-i18n="recommended">Recommended</div>
                     <div class="pricing-header">
                         <h3 data-i18n="planPremium">Premium</h3>
-                        <div class="price-group">
-                            <div class="price">
-                                <span class="price-currency">$</span>
-                                <span class="price-amount">3.5</span>
-                                <span class="price-period" data-i18n="perMonthUS">/month (US)</span>
-                            </div>
-                            <div class="price">
-                                <span class="price-currency">¥</span>
-                                <span class="price-amount">480</span>
-                                <span class="price-period" data-i18n="perMonthJP">/月 (日本)</span>
-                            </div>
+                        <div class="price" id="premiumPrice">
+                            <span class="price-currency">$</span>
+                            <span class="price-amount">3.5</span>
+                            <span class="price-period" data-i18n="perMonth">/month</span>
                         </div>
                     </div>
                     <ul class="pricing-features">
@@ -378,7 +371,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="katari-full.png" alt="Katari" class="footer-logo">
-                    <p data-i18n="footerTagline">Master language through explanations</p>
+                    <p data-i18n="footerTagline">Master language through detailed explanations</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-column">
