--- a/index.html
+++ b/index.html
@@ -1037,11 +1037,7 @@
             <h2 class="section-title" data-i18n="contactTitle">Get In Touch</h2>
             <div class="contact-info">
                 <p><strong data-i18n="contactEmail">Email:</strong> <span
-                        class="placeholder">support@katari-app.com</span></p>
-                <p><strong data-i18n="contactSupport">Support:</strong> <span
-                        class="placeholder">help@katari-app.com</span></p>
-                <p><strong data-i18n="contactBusiness">Business Inquiries:</strong> <span
-                        class="placeholder">business@katari-app.com</span></p>
+                        class="placeholder">support@tommy-tech.net</span></p>
             </div>
         </div>
     </section>
