--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
                 <div class="pricing-card">
                     <div class="pricing-header">
                         <h3 data-i18n="planFree">Free Plan</h3>
-                        <div class="price">
+                        <div class="price" id="premiumPriceBasic">
                             <span class="price-currency">$</span>
                             <span class="price-amount">0</span>
                             <span class="price-period" data-i18n="perMonth">/month</span>
@@ -1599,6 +1599,23 @@
                     priceElement.innerHTML = `
                         <span class="price-currency">$</span>
                         <span class="price-amount">3.5</span>
+                        <span class="price-period">/month</span>
+                    `;
+                }
+            }
+            // Update premium price based on language
+            const priceElementBasic = document.getElementById('premiumPriceBasic');
+            if (priceElementBasic) {
+                if (currentLanguage === 'ja') {
+                    priceElementBasic.innerHTML = `
+                        <span class="price-currency">¥</span>
+                        <span class="price-amount">0</span>
+                        <span class="price-period">/月</span>
+                    `;
+                } else {
+                    priceElementBasic.innerHTML = `
+                        <span class="price-currency">$</span>
+                        <span class="price-amount">0</span>
                         <span class="price-period">/month</span>
                     `;
                 }
