change privacy inquires

--- a/index.html
+++ b/index.html
@@ -1120,12 +1120,12 @@
 
                 <h3 data-i18n="terms7Title">7. Customer Support</h3>
                 <p data-i18n="terms7Content">For questions about billing, subscriptions, or technical issues, please
-                    contact our support team at support@katari-app.com. We aim to respond within 24-48 hours during
+                    contact our support team at support@tommy-tech.net. We aim to respond within 24-48 hours during
                     business days.</p>
 
                 <div class="contact-placeholder">
                     <p><strong data-i18n="contactUs">Contact us:</strong> <span
-                            class="placeholder">support@katari-app.com</span></p>
+                            class="placeholder">support@tommy-tech.net</span></p>
                 </div>
 
                 <h2 id="privacy" data-i18n="privacyTitle">Privacy Policy</h2>
@@ -1153,7 +1153,7 @@
 
                 <div class="contact-placeholder">
                     <p><strong data-i18n="privacyContact">Privacy inquiries:</strong> <span
-                            class="placeholder">privacy@katari-app.com</span></p>
+                            class="placeholder">support@tommy-tech.net</span></p>
                 </div>
             </div>
         </div>
@@ -1333,7 +1333,7 @@
                 terms6Title: "6. Service Availability",
                 terms6Content: "While we strive to provide continuous service availability, we do not guarantee uninterrupted access. Service may be temporarily unavailable due to maintenance, updates, or unforeseen technical issues.",
                 terms7Title: "7. Customer Support",
-                terms7Content: "For questions about billing, subscriptions, or technical issues, please contact our support team at support@katari-app.com. We aim to respond within 24-48 hours during business days.",
+                terms7Content: "For questions about billing, subscriptions, or technical issues, please contact our support team at support@tommy-tech.net. We aim to respond within 24-48 hours during business days.",
                 contactUs: "Contact us:",
                 privacyTitle: "Privacy Policy",
                 privacyLastUpdated: "Last Updated:",
@@ -1491,7 +1491,7 @@
                 terms6Title: "6. サービスの可用性",
                 terms6Content: "継続的なサービス提供に努めていますが、中断のないアクセスを保証するものではありません。メンテナンス、アップデート、または予期しない技術的問題により、サービスが一時的に利用できなくなる場合があります。",
                 terms7Title: "7. カスタマーサポート",
-                terms7Content: "請求、サブスクリプション、または技術的問題についてのご質問は、support@katari-app.comまでお問い合わせください。営業日内に24〜48時間以内の返信を目指しています。",
+                terms7Content: "請求、サブスクリプション、または技術的問題についてのご質問は、support@tommy-tech.netまでお問い合わせください。営業日内に24〜48時間以内の返信を目指しています。",
                 contactUs: "お問い合わせ：",
                 privacyTitle: "プライバシーポリシー",
                 privacyLastUpdated: "最終更新日：",
