特定商取引法に基づく表記

--- a/index.html
+++ b/index.html
@@ -1042,6 +1042,46 @@
         </div>
     </section>
 
+    <!-- 特定商取引法に基づく表記 Section -->
+    <section id="commerce-disclosure" class="legal">
+        <div class="container">
+            <div class="legal-content">
+                <h2 data-i18n="commerceTitle">特定商取引法に基づく表記</h2>
+
+                <h3 data-i18n="commerce2Title">運営責任者</h3>
+                <p><span class="placeholder">富田 洸祐</span></p>
+
+                <h3 data-i18n="commerce5Title">メールアドレス</h3>
+                <p>support@tommy-tech.net</p>
+
+                <h3 data-i18n="commerce6Title">販売価格</h3>
+                <p data-i18n="commerce6Content">プレミアムプラン: 月額480円（日本）/ 月額3.50米ドル（米国）<br>
+                    無料プラン: 0円</p>
+
+                <h3 data-i18n="commerce7Title">商品代金以外の必要料金</h3>
+                <p data-i18n="commerce7Content">インターネット接続料金、通信料金はお客様のご負担となります。</p>
+
+                <h3 data-i18n="commerce8Title">支払方法</h3>
+                <p data-i18n="commerce8Content">Google Playストアを通じたクレジットカード決済、デビットカード決済、Google Playクレジット、キャリア決済</p>
+
+                <h3 data-i18n="commerce9Title">支払時期</h3>
+                <p data-i18n="commerce9Content">サブスクリプション登録時および毎月の自動更新時</p>
+
+                <h3 data-i18n="commerce10Title">サービスの提供時期</h3>
+                <p data-i18n="commerce10Content">決済完了後、即時利用可能</p>
+
+                <h3 data-i18n="commerce11Title">返品・キャンセルについて</h3>
+                <p data-i18n="commerce11Content">デジタルコンテンツの性質上、サービス利用開始後の返品・返金は原則として承っておりません。Google
+                    Playストアの返金ポリシーに基づき、購入後48時間以内であれば返金申請が可能です。技術的な問題でサービスが利用できない場合は、support@tommy-tech.netまでお問い合わせください。
+                </p>
+
+                <h3 data-i18n="commerce12Title">動作環境</h3>
+                <p data-i18n="commerce12Content">Android 8.0以上を搭載したスマートフォン・タブレット<br>
+                    インターネット接続環境が必要</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Legal Sections -->
     <section class="legal">
         <div class="container">
@@ -1177,6 +1217,7 @@
                     </div>
                     <div class="footer-column">
                         <h4 data-i18n="footerLegal">Legal</h4>
+                        <a href="#commerce-disclosure" data-i18n="commerceTitle">特定商取引法に基づく表記</a>
                         <a href="#terms" data-i18n="termsTitle">Terms of Service</a>
                         <a href="#privacy" data-i18n="privacyTitle">Privacy Policy</a>
                         <a href="#contact" data-i18n="navContact">Contact</a>
