最終更新日追記

--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@
                 contactSupport: "サポート：",
                 contactBusiness: "ビジネスに関するお問い合わせ：",
                 termsTitle: "利用規約",
-                termsLastUpdated: "最終更新日：",
+                termsLastUpdated: "最終更新日：2025/11/11",
                 terms1Title: "1. 規約の承認",
                 terms1Content: "Katariにアクセスして使用することで、本利用規約に同意したものとみなされます。",
                 terms2Title: "2. サブスクリプションと支払い",
