最終更新日追記

--- a/index.html
+++ b/index.html
@@ -1535,7 +1535,7 @@
                 terms7Content: "請求、サブスクリプション、または技術的問題についてのご質問は、support@tommy-tech.netまでお問い合わせください。営業日内に24〜48時間以内の返信を目指しています。",
                 contactUs: "お問い合わせ：",
                 privacyTitle: "プライバシーポリシー",
-                privacyLastUpdated: "最終更新日：",
+                privacyLastUpdated: "最終更新日：2025/11/11",
                 privacy1Title: "1. 収集する情報",
                 privacy1Content: "直接提供された情報（メール、名前、練習データ）と自動的に収集される情報（デバイス情報、使用データ）を収集します。",
                 privacy2Title: "2. 情報の使用方法",
