--- a/index.html
+++ b/index.html
@@ -346,14 +346,26 @@
                     $3.50/month (US) or ¥480/month (Japan). You may cancel at any time through the Stripe customer
                     portal. All payments are processed
                     securely through Stripe.</p>
-
+                <h4 data-i18n="terms2aTitle">2.1 Pricing and Fees</h4>
+                <ul>
+                    <li data-i18n="terms2aItem1">Premium Plan: $3.50 USD per month (United States) or ¥480 JPY per month
+                        (Japan)</li>
+                    <li data-i18n="terms2aItem2">Free Plan: $0 - includes 3 AI evaluations per day with basic features
+                    </li>
+                    <li data-i18n="terms2aItem3">All prices are in the currency shown and include applicable taxes where
+                        required by law</li>
+                    <li data-i18n="terms2aItem4">Subscription fees are non-refundable except as required by law or as
+                        specified in our refund policy</li>
+                </ul>
                 <h4 data-i18n="terms2bTitle">2.2 Billing and Renewal</h4>
                 <ul>
                     <li data-i18n="terms2bItem1">Subscriptions automatically renew monthly until cancelled</li>
-                    <li data-i18n="terms2bItem2">You will be charged at the beginning of each billing period</li>
-                    <li data-i18n="terms2bItem3">Payment is processed through Google Play Store's secure payment system
-                    </li>
+                    <li data-i18n="terms2bItem2">You will be charged on the same day each month as your initial
+                        subscription date</li>
+                    <li data-i18n="terms2bItem3">Payment is processed through Stripe's secure payment system</li>
                     <li data-i18n="terms2bItem4">Price changes will be notified 30 days in advance</li>
+                    <li data-i18n="terms2bItem5">Cancellation takes effect at the end of your current billing period
+                    </li>
                 </ul>
 
                 <h3 data-i18n="terms3Title">3. User Accounts</h3>
