stripeの規約準拠化

--- a/index.html
+++ b/index.html
@@ -295,8 +295,17 @@
             <div class="legal-content">
                 <h2 data-i18n="commerceTitle">特定商取引法に基づく表記</h2>
 
+                <h3 data-i18n="commerce1Title">販売業者</h3>
+                <p>富田 洸祐</p>
+
                 <h3 data-i18n="commerce2Title">運営責任者</h3>
                 <p>富田 洸祐</p>
+
+                <h3 data-i18n="commerce3Title">所在地</h3>
+                <p data-i18n="commerce3Content">請求があった場合には遅滞なく開示いたします</p>
+
+                <h3 data-i18n="commerce4Title">電話番号</h3>
+                <p data-i18n="commerce4Content">請求があった場合には遅滞なく開示いたします</p>
 
                 <h3 data-i18n="commerce5Title">メールアドレス</h3>
                 <p>support@tommy-tech.net</p>
